# napari-hello-2

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_hello_2/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
