[metadata]
name = napari-hello-2
version = 0.0.1
author = Ruben Lopez
author_email = rjlopez2@gmail.com
url = https://github.com/your-repo-username/napari-hello-2.git
project_urls =
    Bug Tracker = https://github.com/your-repo-username/your-repo-name/issues
    Documentation = https://github.com/your-repo-username/your-repo-name#README.md
    Source Code = https://github.com/your-repo-username/your-repo-name
    User Support = https://github.com/your-repo-username/your-repo-name/issues

license = MIT
description = "A first napari pluging using cookiecutter"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License


[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    napari-hello-2 = napari_hello_2
